Added mmailing list

--- a/5-lesson5/index.html
+++ b/5-lesson5/index.html
@@ -244,7 +244,7 @@ docker image ls
 <li>The <a href="https://github.com/esnet/xilinx-labtools-docker">xilinx-labtools-docker</a> repository (commit: 84cf05f).</li>
 </ul>
 <h3 id="known-issues">Known Issues</h3>
-<p>None to date. If you face any issues, please contact <a href="mailto:msada@hawk.iit.edu">msada@hawk.iit.edu</a></p>
+<p>None to date. If you face any issues, please contact <a href="mailto:https://groups.google.com/a/iit.edu/g/cs595-f2023-group">https://groups.google.com/a/iit.edu/g/cs595-f2023-group</a></p>
 <h2 id="advanced-lesson-6-esnet-smartnic-fw">Advanced Lesson 6: esnet-smartnic-fw</h2>
 <p>Link: <strong><a href="../6-lesson6/">Advanced Lesson 6: esnet-smartnic-fw</a></strong></p></div>
             </div>
