--- a/6-lesson6/index.html
+++ b/6-lesson6/index.html
@@ -639,7 +639,7 @@ root@smartnic-fw:/# sn-cli cmac status
 <li>The <a href="https://github.com/esnet/xilinx-labtools-docker">xilinx-labtools-docker</a> repository (commit: 84cf05f).</li>
 </ul>
 <h3 id="known-issues">Known Issues</h3>
-<p>None to date. If you face any issues, please contact <a href="mailto:msada@hawk.iit.edu">msada@hawk.iit.edu</a></p>
+<p>None to date. If you face any issues, please contact <a href="mailto:https://groups.google.com/a/iit.edu/g/cs595-f2023-group">https://groups.google.com/a/iit.edu/g/cs595-f2023-group</a></p>
 <h2 id="advanced-lesson-7-dpdk">Advanced Lesson 7: DPDK</h2>
 <p>Link: <strong><a href="../7-lesson7/">Advanced Lesson 7: DPDK</a></strong></p></div>
             </div>
