--- a/3-lesson3/index.html
+++ b/3-lesson3/index.html
@@ -247,7 +247,7 @@ by the input meta data.</p>
 <li>The <a href="https://github.com/esnet/xilinx-labtools-docker">xilinx-labtools-docker</a> repository (commit: 84cf05f).</li>
 </ul>
 <h3 id="known-issues">Known Issues</h3>
-<p>None to date. If you face any issues, please contact <a href="mailto:msada@hawk.iit.edu">msada@hawk.iit.edu</a></p>
+<p>None to date. If you face any issues, please contact <a href="mailto:https://groups.google.com/a/iit.edu/g/cs595-f2023-group">https://groups.google.com/a/iit.edu/g/cs595-f2023-group</a></p>
 <h2 id="lesson-4-rtl-simulation">Lesson 4: RTL Simulation</h2>
 <p>Link: <strong><a href="../4-lesson4/">Lesson 4: RTL Simulation</a></strong></p></div>
             </div>
