fixed mailing list

--- a/4-lesson4/index.html
+++ b/4-lesson4/index.html
@@ -181,7 +181,7 @@ instantiation is located within the <code>example_dut_wrapper</code> module (ins
 <li>The <a href="https://github.com/esnet/xilinx-labtools-docker">xilinx-labtools-docker</a> repository (commit: 84cf05f).</li>
 </ul>
 <h3 id="known-issues">Known Issues</h3>
-<p>None to date. If you face any issues, please contact <a href="mailto:https://groups.google.com/a/iit.edu/g/cs595-f2023-group">https://groups.google.com/a/iit.edu/g/cs595-f2023-group</a></p>
+<p>None to date. If you face any issues, please contact <a href="https://groups.google.com/a/iit.edu/g/cs595-f2023-group">https://groups.google.com/a/iit.edu/g/cs595-f2023-group</a></p>
 <h2 id="advanced-lesson-5-the-esnet-stack">Advanced Lesson 5: The ESnet stack</h2>
 <p><strong>Please note that from Lesson 5 forward, we cover running compiled P4 program bitfile on FPGAs.</strong></p>
 <p>Link: <strong><a href="../5-lesson5/">Advanced Lesson 5: The ESnet Stack</a></strong></p></div>
