--- a/7-lesson7/index.html
+++ b/7-lesson7/index.html
@@ -152,7 +152,7 @@ _EOF
 <li>The <a href="https://github.com/esnet/xilinx-labtools-docker">xilinx-labtools-docker</a> repository (commit: 84cf05f).</li>
 </ul>
 <h3 id="known-issues">Known Issues</h3>
-<p>None to date. If you face any issues, please contact <a href="mailto:https://groups.google.com/a/iit.edu/g/cs595-f2023-group">https://groups.google.com/a/iit.edu/g/cs595-f2023-group</a></p>
+<p>None to date. If you face any issues, please contact <a href="https://groups.google.com/a/iit.edu/g/cs595-f2023-group">https://groups.google.com/a/iit.edu/g/cs595-f2023-group</a></p>
 <h2 id="conclusion">Conclusion</h2>
 <p>Congratulations! You've successfully set up Xilinx Alveo FPGAs as SmartNICs using the ESnet framework. This powerful combination opens doors to accelerated network processing and customization. Feel free to explore further, experiment, and innovate with FPGA-based SmartNIC solutions.</p>
 <p>For more information, visit the official ESnet repositories:
