--- a/2-lesson2/index.html
+++ b/2-lesson2/index.html
@@ -254,7 +254,7 @@ interface, a user Program <strong>MUST</strong> have:</p>
 <li>The <a href="https://github.com/esnet/xilinx-labtools-docker">xilinx-labtools-docker</a> repository (commit: 84cf05f).</li>
 </ul>
 <h3 id="known-issues">Known Issues</h3>
-<p>None to date. If you face any issues, please contact <a href="mailto:https://groups.google.com/a/iit.edu/g/cs595-f2023-group">https://groups.google.com/a/iit.edu/g/cs595-f2023-group</a></p>
+<p>None to date. If you face any issues, please contact <a href="https://groups.google.com/a/iit.edu/g/cs595-f2023-group">https://groups.google.com/a/iit.edu/g/cs595-f2023-group</a></p>
 <h2 id="lesson-3-p4-simulation">Lesson 3: P4 Simulation</h2>
 <p>Link: <strong><a href="../3-lesson3/">Lesson 3: P4 Simulation</a></strong></p></div>
             </div>
