--- a/1-lesson1/index.html
+++ b/1-lesson1/index.html
@@ -264,7 +264,7 @@ pip3 install -r esnet-fpga-library/tools/regio/requirements.txt</p>
 <li>The <a href="https://github.com/esnet/xilinx-labtools-docker">xilinx-labtools-docker</a> repository (commit: 84cf05f).</li>
 </ul>
 <h3 id="known-issues">Known Issues</h3>
-<p>None to date. If you face any issues, please contact <a href="https://groups.google.com/a/iit.edu/g/cs595-f2023-group">https://groups.google.com/a/iit.edu/g/cs595-f2023-group</a></p>
+<p>None to date. If you face any issues, please contact <a href="mailto:cs595-f2023-group@iit.edu">mailto:cs595-f2023-group@iit.edu</a></p>
 <h2 id="lesson-2-esnet-smartnic-hw">Lesson 2: esnet-smartnic-hw</h2>
 <p>Link: <strong><a href="../2-lesson2/">Lesson 2: esnet-smartnic-hw</a></strong></p></div>
             </div>
